changed rifumos name

--- a/form.html
+++ b/form.html
@@ -34,7 +34,7 @@
         <option value="kgao">
         <option value="floyd">
         <option value="ntiveko">
-        <option value="rifumo">
+        <option value="Rifumo">
         <option value="vivid">
         <option value="theo">
         <option value="bongani">
@@ -60,8 +60,8 @@
          <option value="areka">
          <option value="lebo">
          <option value="T.man">
-         <option value="fanaboy">
-         <option value="xolani">
+         <option value="Fanaboy">
+         <option value="Xolani">
          <option value="makungu">
          <option value="musa">
          <option value="bonga">
