--- a/Mpithi.html
+++ b/Mpithi.html
@@ -34,9 +34,9 @@
 <p id="middle">It is also home to the upcoming rappers Tella blunt and Mr Tee people who
   are taking over the music industry by storm  mad love to our local rappers.Mpithi is
   also home to the upcoming soccer sensations Sandile Manzini,Amukelani Kamusa,Kgaogelo Mdluli and Diken a.k.a Rambo.
-  These are one of the bigest players in Thulamahashe </p>
+  These are one of the biggest players in Thulamahashe </p>
 
-  <p id="bottom">Mpithi aslo has one of the most phenomenal beatboxer around the nation Floyd Shabangu.
+  <p id="bottom">Mpithi also has one of the most phenomenal beatboxer around the nation Floyd Shabangu.
     It is also home to the 2nd princess of Thulamahashe,a model who one day will be crowned miss universe Candice Ndlovu
       a Radiographer Akani Khumalo  and a weight lifting champion Penwell Sibiya are both products of  Mpithi
       lastly but not least Mpithi has  wonderfull  schools which offer the best education to those
